@@ -1,3 +1,8 @@
+2010-01-27  Robert Millan  <rmh.grub@aybabtu.com>
+
+	* util/grub-fstest.c (fstest): Rewrite allocation, fixing a few
+	memleak conditions.
+
 2010-01-27  Carles Pina i Estany  <carles@pina.cat>
 
 	* util/lvm.c: New macro LVM_DEV_MAPPER_STRING.
